Attempt to migrate to Java 19.